# Sithon

./: .gitignore  CMakeLists.txt  README.md  comparators.cpp  comparators.h  lexer.h  mython.cpp  object.cpp  object.h  object_holder.cpp  object_holder.h  object_holder_test.cpp  object_test.cpp  parse.cpp  parse.h  parse_test.cpp  statement.cpp  statement.h  statement_test.cpp
src/: CMakeLists.txt  comparators.cpp  comparators.h  complex_tests.cpp  complex_tests.h  lexer.cpp  lexer.h  lexer_test.cpp  object.cpp  object.h  object_holder.cpp  object_holder.h  object_holder_test.cpp  object_test.cpp  parse.cpp  parse.h  parse_test.cpp  sithon.cpp  statement.cpp  statement.h  statement_test.cpp  test_runner.h
